# MathTree

./: README.md  expressionSolver.cpp  makefile
MathTree/: CMakeLists.txt
MathTree/src/: CMakeLists.txt  Expression.cpp  Expression.hpp  InfixParselets.cpp  InfixParselets.hpp  Lexer.cpp  Lexer.hpp  Numbers.cpp  Numbers.hpp  Operations.cpp  Operations.hpp  Parser.cpp  Parser.hpp  PrefixParselets.cpp  PrefixParselets.hpp  Token.cpp  Token.hpp  TokenMatchers.cpp  TokenMatchers.hpp  Utils.cpp  Utils.hpp
MathTree/tests/: AbstractPrattParserMock.hpp  ArithmeticLexerTest.cpp  ArithmeticParserTest.cpp  BinaryExpressionTest.cpp  BinaryExpressionsTest.cpp  CMakeLists.txt  ExpressionMock.hpp  ExpressionTest.cpp  InfixParseletsTest.cpp  MatchersTest.cpp  NumbersTest.cpp  OperationsTest.cpp  PrattParserTest.cpp  PrefixParseletsTest.cpp  RealNumberTest.cpp  UnaryExpressionsTest.cpp  ValidationTest.cpp
driver/: CMakeLists.txt  expressionSolver.cpp
src/: expressionSolver.cpp
